<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OBD in the Cloud</string>
    <string name="edit_message">Enter a message</string>

    <!-- Dialog Buttons Text -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <!-- Basic Button Titles - Not used (yet) -->
    <string name="button_setup_network">Network</string>
    <string name="button_start_logging">Logging</string>
    <string name="button_gryphon_monitor">Monitor</string>
    <string name="button_connect_cloud">Cloud</string>
    <string name="button_view_logs">Logs</string>

    <!-- Activity Titles -->
    <string name="title_activity_main">OBD In The Cloud</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_network_setup">Download Logs From Gryphon</string>
    <string name="title_activity_log_files_list">List of Log Files</string>
    <string name="title_activity_view_stored_logs">View Logs Stored on Device</string>
    <string name="title_activity_cloud_file_upload">Upload Files To Cloud</string>
    
    <!-- Unused Activity -->
    <string name="title_activity_read_log_files">ReadLogFiles</string>

    <!-- Menu Strings -->
    <string name="menu_settings">Settings</string>

    <!-- Strings for Main Activity Buttons -->
    <string name="setup_network">Download Log Files From Gryphon</string>
    <string name="start_logging">Start Logging Gryphon Output</string>
    <string name="gryphon_monitor">Monitor Gryphon Output</string>
    <string name="connect_cloud">Upload Log Files to Google Cloud Platform</string>
    <string name="view_logs">View Stored Gryphon Logs</string>
    <string name="umichDesc">University of Michigan - Dearborn College of Engineering and Computer Science</string>

    <!-- Default Hello World Text -->
    <string name="hello_world">Hello world!</string>

    <!-- Network Setup Screen Strings -->
    <string name="enter_ip_adress">Enter the IP Address of the Gryphon</string>
    <string name="ip_address">192.168.0.112</string>
    <string name="gryphon_log_filename">No File Selected</string>
    <string name="list_button">Click To List Gryphon Files</string>
    <string name="download_button">Click to Download Selected File</string>

    <!-- View Log Files Strings -->
    <string name="filename">No File Chosen</string>
    <string name="fileContents">No Text to Display</string>
    <string name="list_logfiles">Click to Select Another Log File</string>
    <string name="N_A">Done Viewing Files</string>
    <string name="select_file">Select a file</string>
    
    <!-- Cloud File Upload Strings -->
    <string name="uploadSelectedFile">Upload Selected File</string>
    <string name="auth_account_name">No Authorization Account Selected</string>
    <string name="resp_label_text">Response Code:</string>
    <string name="resp_text">Upload Not Intiated</string>
    <string name="resp_content_label_text">Response Content</string>
    <string name="resp_content_text">Upload Not Initiated</string>
    <string name="select_acct_text">Select Account</string>

</resources>