<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context=".MainActivity"
    tools:ignore="ExtraText" >
    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/setup_network"
        android:onClick="setupNetwork"
        />
       
	<Button 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_logs"
        android:onClick="viewStorage"
        />
    
    <Button 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect_cloud"
        android:onClick="connectCloud"
        />
    
    <Button 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_logging"
        android:onClick="startLogging" 
        />
    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/gryphon_monitor"
        android:onClick="monitorGryphon"
        />
       
</LinearLayout>